--- a/store/Views/Home/OrdersView.cshtml
+++ b/store/Views/Home/OrdersView.cshtml
@@ -73,7 +73,7 @@
                         }
                         else
                         {
-                            <td>Approved</td>
+                            <td>Delivered</td>
                         }
 
 
